Fix qr code not fully visible

--- a/needsharebutton.css
+++ b/needsharebutton.css
@@ -114,7 +114,7 @@
   margin-right: 10px;
 }
 .need-share-button_dropdown-middle-right {
-  top: 50%;
+  bottom: 0;
   left: 100%;
 
   margin-left: 10px;
